--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "express": "3.x",
     "express3-handlebars": "*",
-    "socket.io": "^1.5.1"
+    "socket.io": "^1.5.1",
+    "yelp": "^1.0.1"
   },
   "engines": {
     "node": "0.10.x"
